<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:paddingLeft="20px"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_menu_black"
        app:titleTextColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ImagemView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/appbar"/>
    <TextView
        android:id="@+id/tvusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá, Gustavo"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <TextView
        android:id="@+id/tvagencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/tvusuario"
        app:layout_constraintTop_toBottomOf="@id/tvusuario"/>
    <TextView
        android:id="@+id/tvconta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cc 111111-1"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/tvagencia"
        app:layout_constraintTop_toTopOf="@id/tvagencia"/>

    <com.google.android.material.card.MaterialCardView
    android:id="@+id/cardsaldo"
    android:elevation="8dp"
    android:layout_width="0dp"
    app:cardCornerRadius="5dp"
    android:layout_height="200dp"
    android:layout_marginTop="32dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layout_constraintTop_toBottomOf="@id/tvagencia"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivsaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_update_black"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/tvsaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtsaldo"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/ivsaldo"
        app:layout_constraintLeft_toRightOf="@+id/ivsaldo"
        app:layout_constraintBottom_toBottomOf="@id/ivsaldo"
        android:textSize="18sp"/>
    <ImageView
        android:id="@+id/ivup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_less_black"
        android:layout_margin="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvsaldodisponivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 7.500,00"
        android:textStyle="bold"
         android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvsaldo"
        app:layout_constraintStart_toStartOf="@+id/ivsaldo"
        android:layout_marginTop="24dp"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/tvlimite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo"
        app:layout_constraintTop_toBottomOf="@id/tvsaldodisponivel"
        app:layout_constraintStart_toStartOf="@+id/tvsaldodisponivel"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/tvtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 9.000,95"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/tvlimite"
        app:layout_constraintStart_toEndOf="@+id/tvlimite"
        android:textSize="16sp"/>

    <View
        android:id="@+id/vwlinha"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvlimite" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_extrato"
        android:textColor="@color/topbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwlinha"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

<com.google.android.material.card.MaterialCardView
    android:id="@+id/cardpagar"
    android:layout_width="100dp"
    android:layout_height="100dp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_margin="16dp"
    app:layout_constraintTop_toBottomOf="@+id/cardsaldo">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_pagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_credit_card_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/lbpagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtpagar"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_pagar"/>
</androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

<com.google.android.material.card.MaterialCardView
        android:id="@+id/cardtransferir"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardsaldo"
        app:layout_constraintStart_toEndOf="@+id/cardpagar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/lbtransferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txttransferir"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_transferir"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

<com.google.android.material.card.MaterialCardView
        android:id="@+id/cardrecarga"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardsaldo"
        app:layout_constraintStart_toEndOf="@+id/cardtransferir">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_iphone_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/lbrecarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtrecarregar"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_recarga"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <ImageView
        android:id="@+id/iv_cartao_content"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardpagar" />

    <TextView
        android:id="@+id/txtcartaofinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:text="@string/txtcartfinal"
        app:layout_constraintStart_toStartOf="@+id/iv_cartao_content"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_content"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_content"/>
    <TextView
        android:id="@+id/txtnumerocartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:text="234560"
        app:layout_constraintStart_toEndOf="@id/txtcartaofinal"
        app:layout_constraintTop_toTopOf="@id/txtcartaofinal"/>

    <ImageView
        android:id="@+id/ivdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:src="@drawable/ic_expand_more_black"
        app:layout_constraintBottom_toBottomOf="@+id/txtcartaofinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtcartaofinal" />

</androidx.constraintlayout.widget.ConstraintLayout>